<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">About Test Assistant</string>
    <string name="about_us">About Us</string>
    <string name="ai">AI</string>
    <string name="ai_reference_range">＜＝0.4</string>
    <string name="alb">ALB</string>
    <string name="alc_range_max">&gt; 8.0</string>
    <string name="alc_range_min">&lt; 4.0</string>
    <string name="allow">Allow</string>
    <string name="alp">ALP</string>
    <string name="alt">ALT</string>
    <string name="analyze">Test</string>
    <string name="app_name">Konsung Q-Test App</string>
    <string name="ast">AST</string>
    <string name="back">Back</string>
    <string name="bas">BAS</string>
    <string name="bas_percent">BAS%</string>
    <string name="bas_percent_reference_range">0.00～1.00</string>
    <string name="bas_reference_range">0.00～0.10</string>
    <string name="basic_measurement">Measurement</string>
    <string name="being_measured">Measuring,do not leave this interface</string>
    <string name="bil">BIL</string>
    <string name="birthday">Birth Date</string>
    <string name="bld">BLD</string>
    <string name="blood_donation_alt">7-50</string>
    <string name="blood_donation_hb">120-170</string>
    <string name="blood_fat_analyzer">blood fat analyzer</string>
    <string name="blood_fat_report">Blood report</string>
    <string name="bloodfat_analyzer">BloodFat Analyzer</string>
    <string name="bloodfat_uit">mg/dL</string>
    <string name="bnp_range_max">&gt; 35000</string>
    <string name="bnp_range_min">&lt; 10</string>
    <string name="bt_not_enabled_leaving">5</string>
    <string name="button_ok">退出</string>
    <string name="button_scan">Find Printers</string>
    <string name="ca">Ca</string>
    <string name="cancel">Cancel</string>
    <string name="cardiac_markers">Cardiac Biomarkers</string>
    <string name="cell_μl">Cell/μL</string>
    <string name="change_nick_name">Switch User</string>
    <string name="change_user">Switch User</string>
    <string name="check_device">Checking device availability</string>
    <string name="check_device_type">Checking device type</string>
    <string name="chose_sex">Select Gender</string>
    <string name="clinic_name">clinic name</string>
    <string name="clinin_info">Clinic Information</string>
    <string name="commdialog_hint_age">Enter age, such as: 37</string>
    <string name="commdialog_hint_id">The id number, no more than 9999</string>
    <string name="commdialog_hint_name">The name, no more than 8 characters</string>
    <string name="commdialog_hint_sex_female">female</string>
    <string name="commdialog_hint_sex_man">male</string>
    <string name="commdialog_hint_title">Please enter patient information:</string>
    <string name="commdialog_toast_id">ID cannot be empty</string>
    <string name="commdialog_toast_id_9999">ID does not exceed 9999</string>
    <string name="commdialog_toast_name">Name cannot be empty</string>
    <string name="commdialog_toast_name_age">Age cannot be empty</string>
    <string name="commdialog_toast_name_birth">Please select the date of birth</string>
    <string name="commdialog_toast_name_length">The length of the name must not exceed 8 characters or 4 Chinese characters</string>
    <string name="commdialog_toast_name_sex">Please select gender</string>
    <string name="company_profile">Company Profile</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Are you sure?</string>
    <string name="connect_fail">Connection Failed</string>
    <string name="connect_success">Connection Successful</string>
    <string name="connecting">Device Connection</string>
    <string name="copy_right">Copyright © 2017～2018 Konsung. All Rights Reserved</string>
    <string name="cr">CR</string>
    <string name="cre">Cr</string>
    <string name="create_clinic">Please create a clinic first</string>
    <string name="create_nick_name">Create User</string>
    <string name="create_nick_name_tip">Create a user. After the test, you can see the test report. If you cancel the creation, create it in [My].</string>
    <string name="create_nickname">Create User</string>
    <string name="create_user">Create User</string>
    <string name="create_user2">CreateUser</string>
    <string name="crp">CRP</string>
    <string name="crp_range_max">&gt;150.00</string>
    <string name="crp_range_mid">&gt; 5.00</string>
    <string name="crp_range_min">&lt; 5.00</string>
    <string name="crp_range_min2">&lt; 0.5</string>
    <string name="crp_reference_range">&lt; 5mg/L</string>
    <string name="crp_unit">mg/L</string>
    <string name="current_device_name">CurrentDevice:</string>
    <string name="current_version">Current version V</string>
    <string name="default_nickname">Default User</string>
    <string name="delete_BloodFat">Whether to switch blood fat devices?  </string>
    <string name="delete_immunofluorescence">Whether to switch immunofluorescence analyzer equipment?</string>
    <string name="delete_nick_name">Delete User</string>
    <string name="delete_poct">Whether to switch leukocyte analyzer devices?</string>
    <string name="delete_protein">Whether to switch hemoglobin analyzer equipment?</string>
    <string name="delete_result">Delete</string>
    <string name="delete_urinalysis">Whether to switch urinary devices?</string>
    <string name="delete_user_tip">Whether to delete the user ? Delete the user, all data of the user will be deleted</string>
    <string name="detection_personnel_information">Please fill in the test personnel information first</string>
    <string name="device_available">Device is available</string>
    <string name="device_state_off">Bluetooth is disconnected, please reconnect</string>
    <string name="device_state_off_tip">Bluetooth Disconnected</string>
    <string name="device_type_mismatch">Device type does not match, please reconnect</string>
    <string name="device_type_mismatch2">Device type does not match, please choose the correct type</string>
    <string name="device_unavailable">Device is not available and needs to be reconnected</string>
    <string name="dialog_ask_title">Description</string>
    <string name="docntorname">doctorname</string>
    <string name="drag_measurement">Drag Measurement</string>
    <string name="edit_user">Edit</string>
    <string name="eos">EOS</string>
    <string name="eos_percent">EOS%</string>
    <string name="eos_percent_reference_range">0.50～5.00</string>
    <string name="eos_reference_range">0.05～0.50</string>
    <string name="et_hint">Please Enter</string>
    <string name="et_hint_chose">Please Select</string>
    <string name="exists">Exist</string>
    <string name="exit_double_click">Click again to exit application</string>
    <string name="female">Female</string>
    <string name="first_hand_fail">The first handshake failed</string>
    <string name="g_l">g/L</string>
    <string name="glu">GLU</string>
    <string name="glu_reference_range">3.9-6.1</string>
    <string name="glu_reference_range_02">70.2-109.8</string>
    <string name="hand_shake">Handshake</string>
    <string name="handshake_success">Handshake Successed</string>
    <string name="hb">Hb</string>
    <string name="hbd_c">HBD-C</string>
    <string name="hbd_c_reference_range">1.00-1.90</string>
    <string name="hct">HCT</string>
    <string name="hct_man_reference_range">Male: 40％～50％</string>
    <string name="hct_unit">%</string>
    <string name="hct_woman_reference_range">Female: 35％～45％</string>
    <string name="hdl_c">HDL-C</string>
    <string name="hdl_c_reference_range">1.00-1.90</string>
    <string name="hdl_c_reference_range_02">38.67-73.47</string>
    <string name="immuoflu_bnp">NT-proBNP</string>
    <string name="immuoflu_bnp_range">&lt; 300pg/mL</string>
    <string name="immuoflu_bnp_unit">pg/mL</string>
    <string name="kf_cr">41-111</string>
    <string name="kf_ua">155-428</string>
    <string name="kf_urea">2.6-9.5</string>
    <string name="ldl_c">LDL-C</string>
    <string name="ldl_c_reference_range">0.00-3.10</string>
    <string name="liver_funcion_alb">40-55</string>
    <string name="liver_funcion_alp">38-126</string>
    <string name="liver_funcion_alt">7-50</string>
    <string name="liver_funcion_ast">13-40</string>
    <string name="lymp">LYM</string>
    <string name="lymp_percent">LYM%</string>
    <string name="lymp_percent_reference_range">20.0～40.0</string>
    <string name="lymp_reference_range">1.00～3.70</string>
    <string name="mmol">mmol/L</string>
    <string name="mon">MON</string>
    <string name="mon_percent">MON%</string>
    <string name="mon_percent_reference_range">3.00～8.00</string>
    <string name="mon_reference_range">0.12～0.80</string>
    <string name="neut">NEU</string>
    <string name="neut_percent">NEU%</string>
    <string name="neut_percent_reference_range">50.0～70.0</string>
    <string name="neut_reference_range">1.50～7.00</string>
    <string name="pct">PCT</string>
    <string name="pct_reference_range">&lt;0.5ng/mL</string>
    <string name="pct_unit">ng/mL</string>
    <string name="percent">%</string>
    <string name="project">Project</string>
    <string name="reference_range">Reference Range</string>
    <string name="result">Result</string>
    <string name="saa">SAA</string>
    <string name="saa_reference_range">&lt;10mg/L</string>
    <string name="u_l">U/L</string>
    <string name="ua">UA</string>
    <string name="umol">umol/L</string>
    <string name="unit">Unit</string>
    <string name="urea">UREA</string>
    <string name="urinalysis_tip">Annotated exception index</string>
    <string name="wbc">WBC</string>
    <string name="wbc_reference_range">Adults:3.5～9.5</string>
    <string name="wbc_unit">10^9/L</string>
</resources>