<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:gravity="center" android:background="#fae8c8" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/urinalysis_tip"/>
    <LinearLayout android:background="#ebebeb" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/project" style="@style/operate_result_text"/>
        <TextView android:text="@string/result" android:layout_weight="1" style="@style/operate_result_text"/>
        <TextView android:text="@string/unit" android:layout_weight="1" style="@style/operate_result_text"/>
        <TextView android:text="@string/reference_range" style="@style/operate_result_text"/>
    </LinearLayout>
    <ScrollView android:id="@+id/svAnalyzeResult" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/ua" style="@style/operate_result_text"/>
                <TextView android:textColor="@color/analyzeResultValue" android:id="@+id/tvUA" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tv_unit_01" android:text="@string/umol" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tvTC_Scope" android:text="@string/kf_ua" style="@style/operate_result_text"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/cr" style="@style/operate_result_text"/>
                <TextView android:textColor="@color/analyzeResultValue" android:id="@+id/tvCR" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tv_unit_02" android:text="@string/umol" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tvTG_Scope" android:text="@string/kf_cr" style="@style/operate_result_text"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/urea" style="@style/operate_result_text"/>
                <TextView android:textColor="@color/analyzeResultValue" android:id="@+id/tvUrea" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tv_unit_03" android:text="@string/mmol" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tvHLDL_C_Scope" android:text="@string/kf_urea" style="@style/operate_result_text"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/ldl_c" style="@style/operate_result_text"/>
                <TextView android:textColor="@color/analyzeResultValue" android:id="@+id/tvLDL_C" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:text="@string/mmol" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tvLDL_C_Scope" android:text="@string/ldl_c_reference_range" style="@style/operate_result_text"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/glu" style="@style/operate_result_text"/>
                <TextView android:textColor="@color/analyzeResultValue" android:id="@+id/tvGLU" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:text="@string/mmol" android:layout_weight="1" style="@style/operate_result_text"/>
                <TextView android:id="@+id/tvAI_Scope" android:text="@string/glu_reference_range" style="@style/operate_result_text"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
